# dd_package

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LIMDD improvements.md  README.md  cosetRefactoring.txt  index.html  methods-that-require-attention.txt  todo-lieuwe.txt  todo.txt
.github/: codeql-config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  cpp-linter.yml
dev/bench/: data.js  index.html
dev/bench_pr/: data.js
include/: CMakeLists.txt  ComplexCache.hpp  ComplexTable.hpp  ComputeTable.hpp  Control.hpp  DDcomplex.hpp  DDexport.hpp  DDpackage.h  DDpackage.hpp  Definitions.hpp  Edge.hpp  GateMatrixDefinitions.h  GateMatrixDefinitions.hpp  NoiseOperationTable.hpp  OperationTable.hpp  ToffoliTable.hpp  UnaryComputeTable.hpp  UniqueTable.hpp
include/dd/: CVecUtilities.hpp  Complex.hpp  ComplexCache.hpp  ComplexNumbers.hpp  ComplexTable.hpp  ComplexValue.hpp  ComputeTable.hpp  ComputeTableLim.hpp  Control.hpp  Definitions.hpp  DensityNoiseTable.hpp  Edge.hpp  Export.hpp  GateMatrixDefinitions.hpp  LimCache.hpp  LimFunctionality.hpp  LimTable.hpp  Log.hpp  Node.hpp  Nodes.hpp  NoiseComputeTable.hpp  NoiseFunctionality.hpp  Package.hpp  PauliAlgebra.hpp  PauliUtilities.hpp  PhaseUtilities.hpp  Profiling.hpp  QuantumCircuitSimulation.hpp  QuantumGate.hpp  StochasticNoiseOperationTable.hpp  ToffoliTable.hpp  UnaryComputeTable.hpp  UniqueTable.hpp
include/dd/tables/: ComputeTable.hpp  MagnitudeTable.hpp  NoiseOperationTable.hpp  PhaseTable.hpp  ToffoliTable.hpp  UnaryComputeTable.hpp  UniqueTable.hpp
src/: CMakeLists.txt  DDcomplex.cpp  DDexport.cpp  DDpackage.cpp  Definitions.cpp
test/: CMakeLists.txt  bench_package.cpp  cliffordCircuits-21q-100q.cpp  cliffordCircuits-3q-20q.cpp  cliffordCircuitsBenchmark-3q-25q.cpp  cliffordCircuitsLarge.cpp  constructStabilizerGroup-tests-illustrations.drawio  difficult-circuits.cpp  hard-circuits.cpp  hardCircuitsBenchmark-3q-15q.cpp  hardCircuitsTest-3q-10q.cpp  main.cpp  miscelleaneousTests.cpp  singleCircuitTest.cpp  testHardCircuit5.cpp  test_complex.cpp  test_lim.cpp  test_package.cpp  test_simple_circuit.cpp  tinyCircuits.cpp  tinyCliffordCircuits.cpp  util.h
test/generate-circuits/: cliffordCircuitsLarge.cpp  cliffordCircuitsMedium.cpp  generate-clifford-circuit.cpp  generate-many-circuits.sh  generateHammingWeightControlledClifford.py  prependRandomCliffordCircuit.py  prependStabsToQasmFiles.py
test/generate-circuits/HammingWeightControlledCircuits/: hwc_10.qasm  hwc_11.qasm  hwc_12.qasm  hwc_13.qasm  hwc_14.qasm  hwc_15.qasm  hwc_16.qasm  hwc_17.qasm  hwc_18.qasm  hwc_19.qasm  hwc_20.qasm  hwc_21.qasm  hwc_22.qasm  hwc_23.qasm  hwc_24.qasm  hwc_25.qasm  hwc_26.qasm  hwc_27.qasm  hwc_28.qasm  hwc_29.qasm  hwc_3.qasm  hwc_30.qasm  hwc_4.qasm  hwc_5.qasm  hwc_6.qasm  hwc_7.qasm  hwc_8.qasm  hwc_9.qasm
